:lipstick: Fixed overflow issue

--- a/depic-src/css/styles.scss
+++ b/depic-src/css/styles.scss
@@ -2,6 +2,7 @@
   font-family: "San Fran Symbols";
   font-weight: normal;
   font-style: normal;
+
   src: url("/assets/fonts/sanfransymbols.woff2") format("woff2"),
   url("/assets/fonts/sanfransymbols.woff") format("woff");
 }
@@ -14,7 +15,9 @@
 html {
   font-family: sans-serif;
   line-height: 1.15;
+
   background: #EFEFF4;
+
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -39,8 +42,11 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.3em;
+
   display: grid;
+
   margin: 0px 0px 0px 0px;
+
   grid-template-rows: 44px auto auto;
 }
 
@@ -71,7 +77,9 @@ ul {
 footer, body > p, h2 {
   font-size: 14px;
   font-weight: 400;
+
   margin: 15px;
+
   color: #6D6D72;
 }
 
@@ -80,54 +88,68 @@ article, aside, footer, header, nav, section {
 }
 
 header {
-  overflow-x: hidden;
   position: fixed;
   z-index: 10;
+
+  overflow-x: hidden;
+
   width: 100%;
   height: 44px;
+
   border-bottom: 1px solid rgba(0,0,0,0.1);
   background: rgba(249,249,249,0.85);
+
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
   grid-row: 1 / span 1;
 
   * {
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   div {
     display: grid;
+
     grid-template-columns: 1fr 1fr 1fr;
 
     a:first-child::before {
       font-size: 28px;
+
       left: 0px;
+
       width: 15px;
       height: 21px;
       margin-top: 1px;
+
       content: "\E92A";
     }
 
     a {
       position: relative;
+
       padding-left: 24px;
+
       text-align: left;
     }
 
     a:first-child::before {
       font-family: "San Fran Symbols";
+
       position: absolute;
+
       display: block;
     }
 
     h1 {
       text-align: center;
+
       grid-column: 2 / span 1;
     }
 
     * {
       font-size: 18px;
       line-height: 44px;
+
       margin: 0px;
     }
   }
@@ -135,7 +157,9 @@ header {
 
 main {
   display: block;
+
   padding-top: 21px;
+
   grid-row: 2 / span 1;
 
   ul.tablelike {
@@ -156,7 +180,9 @@ main {
    > ul {
     margin: 5px 0px 35px 0px;
     padding: 0px;
+
     list-style: none;
+
     background: #FFFFFF;
 
     ul {
@@ -170,6 +196,7 @@ main {
      > li {
       margin-left: 15px;
       padding: 11px 15px 11px 0px;
+
       border-bottom: 1px solid rgba(0,0,0,0.1);
 
       [role=button], [role=link], p {
@@ -183,17 +210,22 @@ main {
     li {
       [role=button]:after, [role=link]:after, header > div > a:first-child::before {
         font-family: "San Fran Symbols";
+
         position: absolute;
+
         display: block;
       }
 
       [role=button]:after, [role=link]:after {
         top: 50%;
         right: 15px;
+
         width: 10px;
         height: 13px;
         margin-top: -10px;
+
         content: "\E929";
+
         color: #C7C7CC;
       }
 
@@ -205,8 +237,11 @@ main {
       [role=button], [role=link] {
         position: relative;
         z-index: 2;
+
         display: block;
+
         padding-right: 30px;
+
         color: #007AFF;
       }
     }
@@ -221,6 +256,7 @@ main {
 
 h2 {
   margin-bottom: 5px;
+
   text-transform: uppercase;
 }
 
@@ -231,24 +267,29 @@ h2 {
 
 a, button {
   text-decoration: none;
+
   color: #007AFF;
 }
 
 a {
   background-color: transparent;
+
   -webkit-text-decoration-skip: objects;
 }
 
 footer {
   text-align: center;
+
   grid-row: 3 / span 1;
 }
 
 img.screenshot-image {
   display: block;
+
   width: 100%;
   max-width: 375px;
   margin: 0px auto;
+
   border-style: none;
 }
 
